Phoenix: Reduce statusbar notification icons size

--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -21,11 +21,15 @@
 
     <!-- Height of the status bar -->
     <dimen name="status_bar_height_portrait">100.0px</dimen>
+    <!-- Height of notification icons in the status bar -->
+    <dimen name="status_bar_icon_size">20dip</dimen>
     <!-- Radius of the software rounded corners at the top of the display in its natural
         orientation. If zero, the value of rounded_corner_radius is used. -->
     <dimen name="rounded_corner_radius_top">102.0px</dimen>
     <!-- Radius of the software rounded corners at the bottom of the display in its natural
         orientation. If zero, the value of rounded_corner_radius is used. -->
     <dimen name="rounded_corner_radius_bottom">102.0px</dimen>
+    <!-- size at which Notification icons will be drawn in the status bar -->
+    <dimen name="status_bar_icon_drawing_size">11dp</dimen>
 
 </resources>
